--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name":"pwa-vue-docker",
+    "short_name":"indexdb-with-vue-localforage",
     "name":"Vue Js PWA with Docker",
     "icon": [
         {
